--- a/src/_includes/nav.njk
+++ b/src/_includes/nav.njk
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="{{ relative_path }}index.html">Navbar</a>
+    <a class="navbar-brand" href="{{ relative_path }}index.html">Home</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -8,13 +8,18 @@
       <ul class="navbar-nav">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Library books
+            Members
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            {% for book in library.books %}
-            <li><a class="dropdown-item" href="{{ relative_path }}books/{{ book.slug}}.html">{{ book.title }}</a></li>
+            {% for member in band.members %}
+            <li><a class="dropdown-item" href="{{ relative_path }}members/{{ member.slug}}.html">{{ member.name }}</a></li>
             {% endfor %}
           </ul>
+        </li>
+         <li class="nav-item">
+          <a class="nav-link" href="#" id="navbarLink" aria-expanded="false">
+            Discography
+          </a>
         </li>
       </ul>
     </div>
