--- a/src/_templates/base.njk
+++ b/src/_templates/base.njk
@@ -2,15 +2,20 @@
 <html lang="en">
   <!-- A Intro to Coding for Journalists class project -->
   <head>
-    <title>{% block page_title %}Default title{% endblock %}</title>
+    <title>Queen | {% block page_title %}Default title{% endblock %}</title>
     <meta name="description" content="{% block page_description %}Default description{% endblock %}">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="{{ relative_path }}css/main.css">
-  </head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Ubuntu&display=swap" rel="stylesheet">
+ </head>
   <body>
     {% include "_includes/nav.njk" %}
+    
+    {% include "_includes/jumbotron.njk" %}
 
     {% block content %}{% endblock %}
 
