--- a/src/index.njk
+++ b/src/index.njk
@@ -1,8 +1,8 @@
 {% extends '_templates/base.njk' %}
 
-{% block page_title %}Index page title{% endblock %}
+{% block page_title %}Home{% endblock %}
 
-{% block page_description %}The index search description for this page goes here.{% endblock %}
+{% block page_description %}Everything you need to know about one of history's greatest bands, from tour dates, members, and more.{% endblock %}
 
 {% block content %}
 <div class="container">
