--- a/src/_templates/base.njk
+++ b/src/_templates/base.njk
@@ -17,6 +17,8 @@
     
     {% include "_includes/jumbotron.njk" %}
 
+    {% include "_includes/carousel.njk" %}
+
     {% block content %}{% endblock %}
 
     {% include "_includes/footer.njk" %}
