--- a/src/scss/_jumbotron.scss
+++ b/src/scss/_jumbotron.scss
@@ -1,8 +1,9 @@
 #jumbo {
-  background-image: url('src/img/img-queen/queen-band-early.jpg');
+  background-image: url('../img/img-queen/queen-band-early.jpg');
   background-size: cover;
   background-position: center;
   font-family: 'Ubuntu', sans-serif;
+  color: red
 }
 
 #jumbo h1 {
