--- a/src/_templates/bake-book.njk
+++ b/src/_templates/bake-book.njk
@@ -8,13 +8,11 @@
 
 {% block content %}
   <article class="container">
-    <div class="row">
-      <div class="col-sm-4">
-          <img src="../img/{{ slug }}.jpg" alt="" class="img-fluid mb-4">
-      </div>
-      <div class="col-sm-8">
-          <h1>{{ title }}</h1>
-          <p>{{ blurb | safe }}</p>
+    <div class="carousel-item">
+      <img src="../img/discs" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+      <h5>...</h5>
+      <p>...</p>
       </div>
     </div>
   </article>
