--- a/src/_includes/nav.njk
+++ b/src/_includes/nav.njk
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="{{ relative_path }}index.html">Home</a>
+    <a class="navbar-brand" href="index.html">Home</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -11,11 +11,9 @@
             Members
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            {% for members in queen %}
-            <li><a class="dropdown-item" href="{{ relative_path }}queen/{{ member.slug}}.html">{{ member.name }}</a></li>
-            {% endfor %}
-          </ul>
-        </li>
+          {% for member in queen %}
+        <li><a class="dropdown-item" href="{{ relative_path }}queen/{{ member.slug }}.html">{{ member.name }}</a></li>
+        {% endfor %}
       </ul>
     </div>
   </div>
