--- a/src/_templates/bake-book.njk
+++ b/src/_templates/bake-book.njk
@@ -2,17 +2,19 @@
 
 {% set relative_path = "../" %}
 
-{% block page_title %}{{ title }}{% endblock %}
+{% block page_title %}{{ name }}{% endblock %}
 
-{% block page_description %}{{ title }} by {{ author }}{% endblock %}
+{% block page_description %}{{ instruments }}{% endblock %}
 
 {% block content %}
   <article class="container">
-    <div class="carousel-item">
-      <img src="../img/discs" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-      <h5>...</h5>
-      <p>...</p>
+    <div class="row">
+      <div class="col-sm-4">
+          <img src="../img/{{ slug }}.jpg" alt="" class="img-fluid mb-4">
+      </div>
+      <div class="col-sm-8">
+          <h1>{{ name }}</h1>
+          <p>{{ blurb | safe }}</p>
       </div>
     </div>
   </article>
